manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: user-service

  namespace: apps

  annotations:

    # Tell Traefik to use HTTP entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:

  # Use Traefik ingress controller
  ingressClassName: traefik

  rules:

    # Public hostname
    - host: api.disapp.net

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                # Service name
                name: user-service

                port:

                  number: 80
